ci: migrate to self-hosted arc-runner-set
- Switch all workflows from ubuntu-latest to arc-runner-set
- Bump docker/build-push-action from v5 to v6

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
   deploy:
     # Only run if Build and Test workflow was successful
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: ubuntu-latest
+    runs-on: arc-runner-set
 
     steps:
 #    - name: Get Commit Message from Previous Workflow
