--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pytest-cov = "^6.0.0"
 hypothesis = "^6.115.0"
 factory-boy = "^3.3.1"
 pytest-timeout = "^2.3.1"
+httpx = "^0.28.0"
 
 
 [build-system]
