--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
+        pip install --disable-pip-version-check --retries 10 --timeout 120 "poetry==2.3.2"
         poetry install
 
     - name: Create .env file
